# conspire

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  book.toml
.github/: CONTRIBUTING.md
.github/workflows/: Conda.yml  Docker.yml  Pages.yml
book/: SUMMARY.md  constitutive.md  contributors.md  index.html  installation.md  introduction.md  julia.md  math.md  python.md  redirect.html  rust.md
book/constitutive/: solid.md
book/constitutive/solid/: elastic.md  hyperelastic.md
book/constitutive/solid/elastic/: almansi_hamel.md
book/constitutive/solid/hyperelastic/: arruda_boyce.md  fung.md  gent.md  mooney_rivlin.md  neo_hookean.md  saint_venant_kirchhoff.md  saint_venant_kirchoff.md  yeoh.md
book/math/: integrate.md  special.md
book/math/integrate/: explicit.md  figures.py  implicit.md
book/math/integrate/explicit/: bogacki_shampine.md  dormand_prince.md  verner_8.md  verner_9.md
book/math/integrate/implicit/: backward_euler.md
book/math/special/: figures.py  inverse_langevin.md  lambert_w.md  langevin.md  rosenbrock.md
src/: main.rs
