[package]
authors = ["Michael R. Buche <mrbuche@sandia.gov>"]
categories = ["mathematics", "science"]
description = "c o n s p i r e"
edition = "2024"
keywords = ["conspire", "mrbuche"]
license = "GPL-3.0"
name = "conspire_wrapper"
version = "0.1.0"

[dependencies]
conspire = { features = ["doc", "constitutive"], git = "https://github.com/mrbuche/conspire.rs.git", rev = "497515b75a570e49d1f3daec487557c4da2bf8ca" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
